# ffreis-integration-hub

./: .gitignore  .gitleaks.toml  AGENTS.md  LICENSE  Makefile  README.md  SECURITY.md  agents.md  lefthook.yml  pyproject.toml  renovate.json  sonar-project.properties
.github/workflows/: actionlint.yml  converter-serving-parity.yml  devops-automation.yml  devops-pr-hygiene.yml  devops-security.yml  gitleaks.yml  grype-fs.yml  labeler.yml  ml-component-contracts.yml  onnx-runner-comparison.yml  release-please.yml  scorecard.yml  secret-scan.yml  semantic-pr.yml  shellcheck.yml  stale.yml  stock-sim-agent-compat.yml  stock-sim-dashboard-compat.yml  stock-sim-full-stack.yml  trivy-fs.yml  weekly-parity.yml
benchmarks/onnx-runner-comparison/: Makefile  README.md  pyproject.toml
benchmarks/onnx-runner-comparison/config/: scenarios.yaml  thresholds.yaml
benchmarks/onnx-runner-comparison/config/modes/: container.yaml  native.yaml
benchmarks/onnx-runner-comparison/orchestrator/: main.py  startup.py  wait_ready.py
benchmarks/onnx-runner-comparison/scenarios/autosklearn-sepal-template/: scenario.yaml
benchmarks/onnx-runner-comparison/scenarios/raw-all-frameworks/: scenario.yaml
benchmarks/onnx-runner-comparison/scenarios/sepal-sum/: scenario.yaml  testset.csv
benchmarks/onnx-runner-comparison/workloads/grpc/: ghz_runner.py
benchmarks/onnx-runner-comparison/workloads/hypothesis/: parity_props.py  strategies.py
config/: repos.json
examples/: docker-compose.converter-serving-parity-grpc.yml  docker-compose.converter-serving-parity.yml  docker-compose.stock-sim-dashboard-agent-experiments.yml
scripts/: bench_compare_grpc.py  bench_compare_http.py  check_feature_contract.py  check_ml_component_contracts.py  check_ml_component_contracts.sh  check_python_typing_debt.py  check_stock_dashboard_compat.py  check_stock_sim_agent_compat.py  compose.sh  convert_and_prepare.py  convert_and_prepare_grpc.py  weekly_check.py
scripts/hooks/: check_commit_msg.sh  check_required_tools.sh
tests/: conftest.py  test_check_feature_contract.py  test_check_ml_component_contracts.py  test_ml_onnx_feature_boundary.py  test_ml_registry_serve_parity.py  test_onnx_feature_boundary.py  test_registry_serve_parity.py
