[project]
name = "ffreis-integration-hub"
version = "0.1.0"
requires-python = ">=3.12"
description = "Cross-repository integration and parity testing harness"
dependencies = [
    "onnx>=1.15.0",
    "onnxruntime>=1.18.0",
    "numpy>=1.24",
    "httpx>=0.27",
]

[project.optional-dependencies]
# To enable test_registry_serve_parity and test_ml_registry_serve_parity:
#   pip install -e ../ffreis-ml-registry    (requires Python >=3.13)
# The tests skip gracefully when ml_registry is not installed.
registry = []
# Note: both ffreis-ml-registry and ffreis-ml-crypto-env require Python >=3.13
# and cannot be declared as uv extras in this hub (requires-python = ">=3.12").
# Install them manually in a Python 3.13+ environment:
#   uv pip install -e ../ffreis-ml-registry
#   uv pip install -e ../ffreis-ml-crypto-env
# The contract tests skip gracefully when either sibling is absent.

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "RUF"]
# E501: line too long (formatter enforces line-length separately)
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=check_ml_component_contracts",
    "--cov=check_feature_contract",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]
markers = [
    "integration: cross-repo integration tests (require sibling packages installed)",
]
